Bug 562470 - Give JSBackgroundTask a virtual destructor (r=me)