js/src/jstask.h
@@ -43,6 +43,7 @@ class JSBackgroundTask {
     friend class JSBackgroundThread;
     JSBackgroundTask* next;
   public:
+    virtual ~JSBackgroundTask() = 0;
     virtual void run() = 0;
 };
 
